--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
+    "date-fns": "^2.17.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
